fixed wrong font family at reporting progrewss popup, fixed wrong input layout in xApi login page

--- a/css/main.css
+++ b/css/main.css
@@ -519,7 +519,7 @@
     position: relative;
     padding: 20px 20px 20px 50px;
     font-size: 16px;
-    font-family: 'OpenSans-Semibold';
+    font-family: Roboto;
     color: #424e5e;
 }
 
